corrigiendo distribución carrito de compras

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
     <aside class="cart">
         <h2 class="cart__title">Carrito de Compras</h2>
-        <ul class="cart__items">
+        <div class="cart__items">
             <!-- Los productos del carrito se agregarán aquí dinámicamente -->
-        </ul>
+        </div>
         <p class="cart__total">Total: $0.00</p>
         <button class="cart__clear" disabled>Vaciar Carrito</button>
         <button class="cart__checkout" disabled>Confirmar Compra</button>
